--- a/data/xss/output/qt_app.ui
+++ b/data/xss/output/qt_app.ui
@@ -1,81 +1,89 @@
+
+        SLOT#1 = a
+    
+        SLOT#2 = b
+    
+        SLOT#3 = 20
+    
+
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <class>Widget</class>
-  <widget class="QWidget" name="application">
-    <property name="geometry">
-      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>431</width>
-      <height>174</height>
-      </rect>
-    </property>
-    <property name="windowTitle">
-      <string>My first application</string>
-    </property>
-  </widget>
+    <class>Widget</class>
+    <widget class="QWidget" name="application">
+        <property name="geometry">
+            <rect>
+                <x>0</x>
+                <y>0</y>
+                <width>431</width>
+                <height>174</height>
+            </rect>
+        </property>
+        <property name="windowTitle">
+            <string>My first application</string>
+        </property>
+    </widget>
   
-	    <widget class="QLabel" name="label">
-      <property name="geometry">
-        <rect>
-          <x>170</x>
-          <y>70</y>
-          <width>91</width>
-          <height>16</height>
-        </rect>
-      </property>
+    <widget class="QLabel" name="__label1">
+        <property name="geometry">
+            <rect>
+                <x>170</x>
+                <y>70</y>
+                <width>91</width>
+                <height>16</height>
+            </rect>
+        </property>
         <property name="caption">
-          <null>Here is the text</null>
+            <null>Here is the text</null>
         </property>
     </widget>
     <widget class="QPushButton" name="pushButton_1">
-      <property name="geometry">
-        <rect>
-          <x>110</x>
-          <y>30</y>
-          <width>75</width>
-          <height>23</height>
-        </rect>
-      </property>
+        <property name="geometry">
+            <rect>
+                <x>110</x>
+                <y>30</y>
+                <width>75</width>
+                <height>23</height>
+            </rect>
+        </property>
         <property name="caption">
-          <null>Click me</null>
+            <null>Click me</null>
         </property>
     </widget>
     <widget class="QPushButton" name="pushButton_2">
-      <property name="geometry">
-        <rect>
-          <x>210</x>
-          <y>30</y>
-          <width>91</width>
-          <height>23</height>
-        </rect>
-      </property>
+        <property name="geometry">
+            <rect>
+                <x>210</x>
+                <y>30</y>
+                <width>91</width>
+                <height>23</height>
+            </rect>
+        </property>
         <property name="caption">
-          <null>Change text</null>
+            <null>Change text</null>
         </property>
     </widget>
     <widget class="QWidget" name="application">
-      <property name="geometry">
-        <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>431</width>
-          <height>174</height>
-        </rect>
-      </property>
+        <property name="geometry">
+            <rect>
+                <x>0</x>
+                <y>0</y>
+                <width>431</width>
+                <height>174</height>
+            </rect>
+        </property>
         <property name="id">
-          <null>application</null>
+            <null>application</null>
         </property>
         <property name="title">
-          <null>My first application</null>
+            <null>My first application</null>
         </property>
         <property name="target">
-          <null>null</null>
+            <null>null</null>
         </property>
     </widget>
 
-	<layoutdefault spacing="6" margin="11"/>
-	<resources/>
-	<connections/>
+    <layoutdefault spacing="6" margin="11"/>
+    <resources/>
+    <connections/>
 </ui>
 
