--- a/xss/production/android/Contacts/res/layout/main.xml
+++ b/xss/production/android/Contacts/res/layout/main.xml
@@ -7,141 +7,179 @@
     android:layout_height="fill_parent"
             >
                 <com.xkp.android.Contacts.XKPLayout android:id="@+id/__div1"
+                android:layout_height="45px"
+                xkp:placement="XKPLayout.PL_TOP"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 <Button android:id="@+id/btnLeft"
-                android:layout_width="wrap_content"
+                android:text="@string/res0"
+                android:layout_width="120px"
+                xkp:placement="XKPLayout.PL_LEFT"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 </Button>
                 <Button android:id="@+id/btnRight"
-                android:layout_width="wrap_content"
+                android:text="@string/res1"
+                android:layout_width="120px"
+                xkp:placement="XKPLayout.PL_RIGHT"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 </Button>
                 </com.xkp.android.Contacts.XKPLayout>
                 <com.xkp.android.Contacts.XKPSwitcher android:id="@+id/swtStates"
+                xkp:current="@+id/divAdd"
+                xkp:placement="XKPLayout.PL_CLIENT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 <com.xkp.android.Contacts.XKPLayout android:id="@+id/divAdd"
+                xkp:placement="XKPLayout.PL_CLIENT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 <TextView android:id="@+id/lblFullName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:text="@string/res2"
+                xkp:layout_x="10px"
+                xkp:layout_y="10px"
+                android:layout_width="140px"
+                android:layout_height="35px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </TextView>
                 <TextView android:id="@+id/lblPhone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:text="@string/res3"
+                xkp:layout_x="10px"
+                xkp:layout_y="60px"
+                android:layout_width="140px"
+                android:layout_height="35px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </TextView>
                 <EditText android:id="@+id/edtFullName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                xkp:layout_x="160px"
+                xkp:layout_y="5px"
+                android:layout_width="140px"
+                android:layout_height="45px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </EditText>
                 <EditText android:id="@+id/edtPhoneNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                xkp:layout_x="160px"
+                xkp:layout_y="55px"
+                android:layout_width="140px"
+                android:layout_height="45px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </EditText>
                 <CheckBox android:id="@+id/chkVerifier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:text="@string/res4"
+                android:checked="true"
+                xkp:layout_x="10px"
+                xkp:layout_y="120px"
+                android:layout_width="250px"
+                android:layout_height="40px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </CheckBox>
                 <Button android:id="@+id/btnAddContact"
+                android:text="@string/res5"
+                android:layout_height="40px"
+                xkp:placement="XKPLayout.PL_BOTTOM"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 </Button>
                 </com.xkp.android.Contacts.XKPLayout>
                 <com.xkp.android.Contacts.XKPLayout android:id="@+id/divFind"
+                xkp:placement="XKPLayout.PL_CLIENT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 <TextView android:id="@+id/lblFindType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:text="@string/res6"
+                xkp:layout_x="10px"
+                xkp:layout_y="10px"
+                android:layout_width="100px"
+                android:layout_height="35px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </TextView>
                 <RadioButton android:id="@+id/rdbByName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:text="@string/res7"
+                xkp:layout_x="10px"
+                xkp:layout_y="60px"
+                android:layout_width="100px"
+                android:layout_height="35px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </RadioButton>
                 <RadioButton android:id="@+id/rdbByPhone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:text="@string/res8"
+                xkp:layout_x="10px"
+                xkp:layout_y="110px"
+                android:layout_width="100px"
+                android:layout_height="35px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </RadioButton>
                 <TextView android:id="@+id/lblCriterion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:text="@string/res9"
+                xkp:layout_x="10px"
+                xkp:layout_y="180px"
+                android:layout_width="100px"
+                android:layout_height="35px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </TextView>
                 <EditText android:id="@+id/edtCriterion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                xkp:layout_x="120px"
+                xkp:layout_y="220px"
+                android:layout_width="100px"
+                android:layout_height="45px"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </EditText>
                 </com.xkp.android.Contacts.XKPLayout>
                 <com.xkp.android.Contacts.XKPLayout android:id="@+id/divAbout"
+                xkp:placement="XKPLayout.PL_CLIENT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                android:visible="View.VISIBLE"
             >
                 <TextView android:id="@+id/lblName"
+                android:text="@string/res10"
+                xkp:layout_x="10px"
+                xkp:layout_y="10px"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </TextView>
                 <TextView android:id="@+id/lblContact"
+                android:text="@string/res11"
+                xkp:layout_x="10px"
+                xkp:layout_y="50px"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                xkp:placement=""none""
-                android:visible="true"
+                xkp:placement="XKPLayout.PL_NONE"
+                android:visible="View.VISIBLE"
             >
                 </TextView>
                 </com.xkp.android.Contacts.XKPLayout>
