--- a/xss/idioms/android/copy.defaults/res/values/attrs.xml
+++ b/xss/idioms/android/copy.defaults/res/values/attrs.xml
@@ -6,13 +6,13 @@
 		<attr name="autosize_x" format="boolean"/>
 		<attr name="autosize_y" format="boolean"/>
 		<attr name="placement">
-			<enum name="XKPLayout.PL_NONE"   value="0"/>
-			<enum name="XKPLayout.PL_TOP"    value="1"/>
-			<enum name="XKPLayout.PL_LEFT"   value="2"/>
-			<enum name="XKPLayout.PL_RIGHT"  value="3"/>
-			<enum name="XKPLayout.PL_BOTTOM" value="4"/>
-			<enum name="XKPLayout.PL_CLIENT" value="5"/>
-			<enum name="XKPLayout.PL_CENTER" value="6"/>
+			<enum name="none"   value="0"/>
+			<enum name="top"    value="1"/>
+			<enum name="left"   value="2"/>
+			<enum name="right"  value="3"/>
+			<enum name="bottom" value="4"/>
+			<enum name="client" value="5"/>
+			<enum name="center" value="6"/>
 		</attr>
 	</declare-styleable>
 		
