--- a/xss/production/android/Contacts/res/layout/main.xml
+++ b/xss/production/android/Contacts/res/layout/main.xml
@@ -11,6 +11,7 @@
                 xkp:placement="top"
                 android:layout_width="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 <Button android:id="@+id/btnLeft"
                 android:text="@string/res0"
@@ -18,6 +19,7 @@
                 xkp:placement="left"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </Button>
                 <Button android:id="@+id/btnRight"
@@ -26,6 +28,7 @@
                 xkp:placement="right"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </Button>
                 </com.xkp.android.Contacts.XKPLayout>
@@ -35,12 +38,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 <com.xkp.android.Contacts.XKPLayout android:id="@+id/divAdd"
                 xkp:placement="client"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 <TextView android:id="@+id/lblFullName"
                 android:text="@string/res2"
@@ -50,6 +55,7 @@
                 android:layout_height="35px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </TextView>
                 <TextView android:id="@+id/lblPhone"
@@ -60,6 +66,7 @@
                 android:layout_height="35px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </TextView>
                 <EditText android:id="@+id/edtFullName"
@@ -69,6 +76,7 @@
                 android:layout_height="45px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </EditText>
                 <EditText android:id="@+id/edtPhoneNumber"
@@ -78,6 +86,7 @@
                 android:layout_height="45px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </EditText>
                 <CheckBox android:id="@+id/chkVerifier"
@@ -89,6 +98,7 @@
                 android:layout_height="40px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </CheckBox>
                 <Button android:id="@+id/btnAddContact"
@@ -97,6 +107,7 @@
                 xkp:placement="bottom"
                 android:layout_width="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </Button>
                 </com.xkp.android.Contacts.XKPLayout>
@@ -105,6 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 <TextView android:id="@+id/lblFindType"
                 android:text="@string/res6"
@@ -114,6 +126,7 @@
                 android:layout_height="35px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </TextView>
                 <RadioButton android:id="@+id/rdbByName"
@@ -124,6 +137,7 @@
                 android:layout_height="35px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </RadioButton>
                 <RadioButton android:id="@+id/rdbByPhone"
@@ -134,6 +148,7 @@
                 android:layout_height="35px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </RadioButton>
                 <TextView android:id="@+id/lblCriterion"
@@ -144,6 +159,7 @@
                 android:layout_height="35px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </TextView>
                 <EditText android:id="@+id/edtCriterion"
@@ -153,6 +169,7 @@
                 android:layout_height="45px"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </EditText>
                 </com.xkp.android.Contacts.XKPLayout>
@@ -161,6 +178,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 <TextView android:id="@+id/lblName"
                 android:text="@string/res10"
@@ -170,6 +188,7 @@
                 android:layout_height="wrap_content"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </TextView>
                 <TextView android:id="@+id/lblContact"
@@ -180,6 +199,7 @@
                 android:layout_height="wrap_content"
                 xkp:placement="none"
                 android:visibility="visible"
+                android:layout_gravity="center"
             >
                 </TextView>
                 </com.xkp.android.Contacts.XKPLayout>
