--- a/xss/production/android/TouchMe/res/layout/main.xml
+++ b/xss/production/android/TouchMe/res/layout/main.xml
@@ -10,7 +10,7 @@
                 android:text="@string/res0"
                 android:layout_width="120px"
                 android:layout_height="120px"
-                xkp:placement="none"
+                xkp:placement="center"
                 android:visibility="visible"
                 android:layout_gravity="center"
             >
