--- a/xss/production/android/SimpleTest/res/layout/main.xml
+++ b/xss/production/android/SimpleTest/res/layout/main.xml
@@ -15,7 +15,7 @@
                 android:layout_height="40dp"
                 xkp:placement="none"
                 android:visibility="visible"
-                android:layout_gravity="center"
+                android:gravity="center"
             >
                 </TextView>
                 <EditText android:id="@+id/edtFirstName"
@@ -25,7 +25,7 @@
                 android:layout_height="40dp"
                 xkp:placement="none"
                 android:visibility="visible"
-                android:layout_gravity="center"
+                android:gravity="center"
             >
                 </EditText>
                 <TextView android:id="@+id/lblLastName"
@@ -36,7 +36,7 @@
                 android:layout_height="40dp"
                 xkp:placement="none"
                 android:visibility="visible"
-                android:layout_gravity="center"
+                android:gravity="center"
             >
                 </TextView>
                 <EditText android:id="@+id/edtLastName"
@@ -46,7 +46,7 @@
                 android:layout_height="40dp"
                 xkp:placement="none"
                 android:visibility="visible"
-                android:layout_gravity="center"
+                android:gravity="center"
             >
                 </EditText>
                 <Button android:id="@+id/btnFullName"
@@ -57,18 +57,28 @@
                 android:layout_height="43dp"
                 xkp:placement="none"
                 android:visibility="visible"
-                android:layout_gravity="center"
+                android:gravity="center"
             >
                 </Button>
                 <TextView android:id="@+id/lblFullName"
                 android:text="@string/res3"
                 xkp:layout_x="10dp"
                 xkp:layout_y="170dp"
-                android:layout_width="200dp"
-                android:layout_height="30dp"
+                android:layout_width="300dp"
+                android:layout_height="25dp"
                 xkp:placement="none"
                 android:visibility="visible"
-                android:layout_gravity="center"
+                android:gravity="center"
             >
                 </TextView>
+                <EditText android:id="@+id/edtContainer"
+                xkp:layout_x="10dp"
+                xkp:layout_y="210dp"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                xkp:placement="none"
+                android:visibility="visible"
+                android:gravity="center"
+            >
+                </EditText>
 			</com.xkp.android.SimpleTest.XKPLayout>
