--- a/xss/production/android/Characters/res/layout/main.xml
+++ b/xss/production/android/Characters/res/layout/main.xml
@@ -11,27 +11,33 @@
 				xkp:name="Aladdin"
 				xkp:surname="Allababa Prince"
 				xkp:employment="Professor of Steal"
+				xkp:img_src="@drawable/aladdin"
 				xkp:placement="top"
 				android:layout_width="320dp"
 				android:layout_height="100dp"
-			>
-				</com.xkp.android.Characters.character>
-				<com.xkp.android.Characters.character android:id="@+id/pluto"
-				xkp:name="Pluto"
-				xkp:surname="Disney Cartoons"
-				xkp:employment="Bones eater"
-				xkp:placement="top"
-				android:layout_width="320dp"
-				android:layout_height="100dp"
+				android:padding="2dp"
 			>
 				</com.xkp.android.Characters.character>
 				<com.xkp.android.Characters.character android:id="@+id/mickey"
 				xkp:name="Mickey"
 				xkp:surname="Disney Cartoons?"
 				xkp:employment="A mouse that ..."
+				xkp:img_src="@drawable/mickey"
 				xkp:placement="top"
 				android:layout_width="320dp"
 				android:layout_height="100dp"
+				android:padding="2dp"
+			>
+				</com.xkp.android.Characters.character>
+				<com.xkp.android.Characters.character android:id="@+id/pluto"
+				xkp:name="Pluto"
+				xkp:surname="Disney Cartoons"
+				xkp:employment="Bones eater"
+				xkp:img_src="@drawable/pluto"
+				xkp:placement="top"
+				android:layout_width="320dp"
+				android:layout_height="100dp"
+				android:padding="2dp"
 			>
 				</com.xkp.android.Characters.character>
 			</com.xkp.android.Characters.XKPLayout>
