--- a/xss/production/android/Maps/res/layout/main.xml
+++ b/xss/production/android/Maps/res/layout/main.xml
@@ -39,14 +39,22 @@
 			>
 				</TextView>
 				</xkp.android.libs.Layout.XKPLayout>
+				<TextView android:id="@+id/lblInformation"
+				android:text="@string/res1"
+				android:layout_height="30dp"
+				android:gravity="center"
+				xkp:placement="bottom"
+				android:layout_width="wrap_content"
+			>
+				</TextView>
 				<xkp.android.libs.Widget.XKPSwitcher android:id="@+id/swtScene"
 				xkp:placement="client"
 				xkp:current="@+id/lblScene"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 			>
-				<TextView android:id="@+id/lblInformation"
-				android:text="@string/res1"
+				<TextView android:id="@+id/lblSwicherInformation"
+				android:text="@string/res2"
 				android:layout_width="200dp"
 				android:layout_height="200dp"
 				xkp:placement="center"
