fixing some bugs & xkpimage component that inheritds from xkpgraphics is added (need to adjusts)

--- a/xss/production/android/Characters/res/layout/character.xml
+++ b/xss/production/android/Characters/res/layout/character.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-				<xkp.android.libs.Layout.XKPLayout android:id="@+id/character"
+				<xkp.android.libs.Layout.XKPLayout android:id="@+id/layoutcharacter" 
 				xmlns:android="http://schemas.android.com/apk/res/android" 
 				xmlns:xkp="http://schemas.android.com/apk/res/xkp.android.Characters" 
 				android:layout_width="320dp"
