jbox2d android idiom v0.4

--- a/xss/idioms/android/copy.defaults/res/values/styleable_XKPGraphics.xml
+++ b/xss/idioms/android/copy.defaults/res/values/styleable_XKPGraphics.xml
@@ -18,6 +18,6 @@
 		<attr name="pos_width" format="dimension"/>
 		<attr name="pos_height" format="dimension"/>
 		
-		<attr name="rotation" format="integer"/>
+		<attr name="rotation" format="float"/>
 	</declare-styleable>
 </resources>
