--- a/xss/production/android/jBox2d_1/res/values/styleable_XKPGraphics.xml
+++ b/xss/production/android/jBox2d_1/res/values/styleable_XKPGraphics.xml
@@ -13,6 +13,6 @@
 		<attr name="pos_y2" format="dimension"/>
 		<attr name="pos_width" format="dimension"/>
 		<attr name="pos_height" format="dimension"/>
-		<attr name="rotation" format="integer"/>
+		<attr name="rotation" format="float"/>
 	</declare-styleable>
 </resources>
